# image-converter-app

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  celery_app.py  converter.py  main.py  pyproject.toml  requirements.txt  tasks.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ConvertForm.jsx  ConvertedResult.jsx  FileSelector.jsx  ImagePreview.jsx
