[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "click==8.2.1",
    "fastapi[standard]==0.115.12",
    "idna==3.10",
    "pillow==11.2.1",
    "pillow-heif==0.22.0",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "python-multipart==0.0.20",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
]
